feat: insulin _name 추가, 지속성 이랑 속효성 분류해서 api 만듦
